<resources>
    <string name="end">到底了</string>
    <string name="loading">加载中…</string>
    <string name="app_name">Take</string>
    <string name="express_plaza">快递广场</string>
    <string name="encounter">消息</string>
    <string name="personal_center">个人中心</string>
    <string name="personal_document">个人资料</string>
    <string name="experss_help">代拿快递</string>
    <string name="my_express">我的快递</string>
    <string name="userName">用户名</string>
    <string name="school">学校</string>
    <string name="quit">退出登录</string>
    <string name="feedback">用户反馈</string>
    <string name="feedbackHint">我有建议/我要吐槽</string>
    <string name="submit">提  交</string>
    <string name="realName">姓名</string>
    <string name="dormitory">宿舍</string>
    <string name="phoneNumber">电话号码</string>
    <string name="enter_password">登录密码</string>
    <string name="isAuthuntication">认证状态</string>
    <string name="howToAuthuntication">如何认证？</string>
    <string name="expressCompany">快递公司</string>
    <string name="takenTime">取件时间</string>
    <string name="takenLocation">快递取件点</string>
    <string name="description">包裹描述或特殊要求</string>
    <string name="warning_information">贵重物品不建议代拿！</string>
    <string name="announce">发布</string>
    <string name="take_button">帮TA代拿</string>
    <string name="taking">（代拿中）</string>
    <string name="done">（已完成）</string>
    <string name="sex">性别</string>
    <string name="or">or</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="identifying_code">验证码</string>
    <string name="send_identifying_code">发送验证码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="enter_new_password">输入新密码</string>
    <string name="finish">完成</string>
    <string name="change_detail">更改订单</string>
    <string name="delete_detail">删除订单</string>
    <string name="finish_time">交接时间</string>
    <string name="finish_location">交接地点</string>
    <string name="request_name">请求者姓名</string>
    <string name="request_major">请求者所在专业班级</string>
    <string name="bounty">奖励</string>
    <string name="￥">￥</string>
    <string name="bounty_price">打赏赏金</string>
    <string name="enter_bounty_price">给点小奖励会让更快地被接单哟，可以是一点赏金或者是小零食之类的</string>
    <string name="enter_taken_location">取件详细地点，如秀水广场</string>
    <string name="enter_finish_location">你希望taker在哪将快递交到你手上，如宿舍请注明x栋楼下;如不在学校，请自行商量交接地点，建议当面交接</string>
    <string name="enter_description">描述快递大小形状或者具体物体，这将让taker更快找到你的快递，不在学校请注明，有特殊要求也可以写上</string>
    <string name="enter_taken_time">取件时间段</string>
    <string name="confirm_password">确认密码</string>
    <string name="action_settings">设置</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="name">输入姓名</string>
    <string name="enter_dormitory">输入宿舍号</string>
    <string name="enter_phone_number">输入电话号码</string>
    <string name="enter_marjor">输入专业班级,如会展143</string>
    <string name="major">专业班级</string>
    <string name="student_number">学号</string>
    <string name="enter_student_number">输入学号</string>
    <string name="enter_password_hint">输入登录密码</string>
    <string name="LoginProgressDialogTitle">登陆</string>
    <string name="RegisterProgressDialogTitle">注册</string>
    <string name="LoginProgressDialogContent">正在登陆中...</string>
    <string name="RegisterProgressDialogContent">正在注册...</string>
    <string name="footer_load_more">加载更多</string>
    <string name="app_version">1.1.0</string>

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <string name="timepicker_year">年</string>
    <string name="timepicker_month">月</string>
    <string name="timepicker_day">日</string>
    <string name="timepicker_hour">时</string>
    <string name="timepicker_min">分</string>
    <string name="timepicker_title">选择时间</string>
    <string name="timepicker_finish">确认</string>
    <string name="timepicker_title_default">设置</string>
    <string name="status">状态</string>
    <string name="expressName">代拿者姓名</string>
    <string name="expressMajor">代拿者专业</string>
    <string name="expressPhone">代拿者手机号</string>
    <string name="publish_sms_hint">快递公司发送的当天快递信息内容，不是当天件请注明。注意，该短信内容仅提供代拿者查看，其他人一律保密</string>
    <string name="publish_sms">快递公司的短信</string>
    <string name="publish_sms_null_tips">填写快递短信内容有助于代拿者更轻松完成任务，是否放弃选择填写？</string>
    <string name="publish_notification_tips">为保障您的快递能如期送达，请时刻关注发布状况</string>
    <string name="click_publish_sms">点击查看短信内容</string>
    <string name="authorisation_tips">认证系统与教育网绑定，请如实填写你的学好及教务网密码，take绝对不会向第三方泄露你的个人信息！</string>
</resources>
