<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F1EA"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:hint="@string/phoneNumber"
        android:textColorHint="#999999"
        android:id="@+id/et_reset_phone_number"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/identifying_code"
            android:textColorHint="#999999"
            android:id="@+id/et_reset_identifying_code"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="10dp"
            android:text="@string/send_identifying_code"
            android:textSize="10dp"
            android:background="@drawable/button_shape"
            android:id="@+id/btn_reset_send_identifying_code"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/et_reset_identifying_code"
            android:layout_alignRight="@+id/et_reset_identifying_code" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_new_password"
        android:textColorHint="#999999"
        android:id="@+id/et_reset_enter_new_password"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_new_password"
        android:textColorHint="#999999"
        android:id="@+id/et_reset_confirm_new_password"
        android:layout_gravity="center_horizontal" />

    <Button
        android:text="@string/finish"
        android:background="#fff841"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finish" />


</LinearLayout>
