<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3">
    <include
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realName"
            android:textColor="#fff841"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/setPersonalName" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff841"
            android:textSize="20dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:text="@string/sex" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="sex"
            android:id="@+id/radio_sex">

            <RadioButton
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_male" />

            <RadioButton
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_female" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textSize="20dp"
            android:textColor="#fff841"
            android:layout_marginLeft="50dp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:entries="@array/school_array"
            android:id="@+id/spinner_school"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">

        </android.support.v7.widget.AppCompatSpinner>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/major"
            android:textColor="#fff841"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"/>

        <EditText
            android:hint="@string/enter_marjor"
            android:id="@+id/setMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#fff841"
        android:text="@string/submit"
        android:id="@+id/btn_submit_info"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:text="请认真填写个人信息  一经填写不得修改"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />


</LinearLayout>