<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="horizontal"
        android:background="@drawable/cbackground7"
        >


        <LinearLayout
            android:id="@+id/userNameNschoolPanel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="13dp"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textSize="25dp"
                android:layout_marginTop="50dp"
                android:id="@+id/userName"
                android:textColor="#ffffff"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/school"
                android:id="@+id/school"
                android:textColor="#ffffff"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#2f91ff"
                android:textSize="10dp"
                android:text="未认证"
                android:id="@+id/authenticated"
                 />

        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/avatar"
            android:src="@mipmap/male"
            android:layout_gravity="center"
            android:layout_weight="1"
/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/personal_document"
            android:paddingLeft="30dp"
            android:drawableRight="@mipmap/click_icon"
            android:id="@+id/personal_ducument"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/experss_help"
            android:paddingLeft="30dp"
            android:drawableRight="@mipmap/click_icon"
            android:id="@+id/express_help"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/my_express"
            android:paddingLeft="30dp"
            android:drawableRight="@mipmap/click_icon"
            android:id="@+id/my_express"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/feedback"
            android:paddingLeft="30dp"
            android:drawableRight="@mipmap/click_icon"
            android:id="@+id/feedback"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="个人认证"
            android:id="@+id/autho"
            android:paddingLeft="30dp"
            android:drawableRight="@mipmap/click_icon"
            android:gravity="center_vertical"
            android:layout_marginTop="1dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fb4444"
        android:textColor="#ffffff"
        android:text="@string/quit"
        android:id="@+id/quit"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
</LinearLayout>
